--- a/first/package.json
+++ b/first/package.json
@@ -2,5 +2,8 @@
   "name": "first",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "test": "node ./index.js"
+  },
   "license": "MIT"
 }
